infra/k8s/orders-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: orders-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels: 
        app: orders 
    spec: 
      containers: 
        - name: orders
          image: sydsfn/order-demo 
---
apiVersion: v1 
kind: Service 
metadata:
  name: orders-srv
spec: 
  selector:
    app: orders
  ports:
  - name: orders  
    protocol: TCP 
    port: 3002
    targetPort: 3002
