infra/k8s/products-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: products-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels: 
        app: products 
    spec: 
      containers: 
        - name: products
          image: sydsfn/products-demo 
---
apiVersion: v1 
kind: Service 
metadata:
  name: products-srv
spec: 
  selector:
    app: products 
  ports:
  - name: products 
    protocol: TCP 
    port: 3001
    targetPort: 3001
