infra/k8s/ingress-nginx-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ecom2.com
    http:
      paths:
      - path: /products/?(.*)
        pathType: Prefix
        backend:
          service:
            name: products-srv
            port:
              number: 3001
      - path: /orders/?(.*)  # Update service name here
        pathType: Prefix
        backend:
          service:
            name: orders-srv  # Change to orders-srv
            port:
              number: 3002
      - path: /customer/?(.*)  # Update service name here
        pathType: Prefix
        backend:
          service:
            name: customer-srv  # Change to orders-srv
            port:
              number: 3003
