infra/k8s/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
spec:
  rules:
    - host: ecom2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-service
                port:
                  number: 9092
